--- a/portfolio.css
+++ b/portfolio.css
@@ -149,11 +149,11 @@ hr{
 .fa-bootstrap{
     color: blueviolet;
 }
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 #mytext{
     padding-left: 30px;
     margin-right: 0px;
-    font-family: Nunito;
+    font-family: 'Nunito', sans-serif;
     color: aliceblue;
 }
 h3{
