--- a/portfolio.css
+++ b/portfolio.css
@@ -241,7 +241,7 @@ html {
     font-size: 750%;
 }
 .cpheader{
-    font-family: cursive;
+    font-family: 'Nunito', sans-serif;
     color: rgb(223, 221, 235);
     font-size: 20px;
     font-weight: 400;
