--- a/portfolio.css
+++ b/portfolio.css
@@ -127,6 +127,7 @@ container-card .card:nth-child(2) .box .content a {
     padding-left: 15%;
 }
 body {
+    min-height: fit-content;
     background: linear-gradient(-45deg, #000220, #000536 , #1a3942, #091418);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -364,7 +365,7 @@ a{
     color: rgb(152, 189, 194);
 }
 section{
-    height: 120vh;
+    height: fit-content;
 }
 .skills-grid{
     height: 60%;
