--- a/portfolio.css
+++ b/portfolio.css
@@ -229,7 +229,7 @@ html {
 .display-4a{
     font-family: "Poppins", sans-serif;
     color: lightcyan;
-    font-size: 40px;
+    font-size: 4vw;
     margin-left: 34.5%;
     padding-left: inherit;
     text-align: left;
