--- a/portfolio.css
+++ b/portfolio.css
@@ -13,7 +13,8 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-
+     margin-left: 20%;
+    margin-right: 20%;
     background: #232427;
 }
 
